# cpp-design

./: .gitignore
guideline_19/: CMakeLists.txt  main.cpp
guideline_19/include/: Circle.hpp  DrawCircleStrategy.hpp  DrawSquareStrategy.hpp  DrawStrategy.hpp  Shape.hpp  Square.hpp
guideline_19/src/: Circle.cpp  Square.cpp
